--- a/Aufgabe3/Persistenz/app/src/main/AndroidManifest.xml
+++ b/Aufgabe3/Persistenz/app/src/main/AndroidManifest.xml
@@ -16,9 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".AppPreferenceActivity"
-            android:label="@string/title_activity_app_preference"></activity>
+        <activity android:name=".AppPreferenceActivity" />
     </application>
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.STORAGE" />
 
 </manifest>
